# cl-volume-renderer

./: .gitignore  CMakeLists.txt  README.md  meson.build
app/: common.h  common_defines.hpp  debug_helper.h  env_map.h  env_map.hpp  hdre_loader.cpp  hdre_loader.h  hdre_loader.hpp  image.cpp  image.hpp  main.cpp  meson.build  nrrd_loader.cpp  nrrd_loader.h  nrrd_loader.hpp  reference_volume.cpp  reference_volume.h  reference_volume.hpp  renderer.cpp  renderer.h  renderer.hpp  sdf_benchmark.cpp  signed_distance_field.cpp  signed_distance_field.h  signed_distance_field.hpp  tf_part.cpp  tf_part.h  tf_part.hpp  ui.cpp  ui.h  ui.hpp  volume_block.cpp  volume_block.h
opencl_kernels/: 2d_image_filter.cl  buffer_reset.cl  empty.cl  hello_world.cl  histogram.cl  random_values.cl  ray_marching.cl  reference_volume_clip.cl  reference_volume_figures.cl  signed_distance_field.cl  transpherefunction.cl  utility.cl  utility_environment_map.cl  utility_filter.cl  utility_ray.cl  utility_sampling.cl  volume_filter.cl
opencl_wrapper/: CMakeLists.txt  meson.build
opencl_wrapper/include/: clw_context.h  clw_foreign_memory.h  clw_function.h  clw_helper.h  clw_image.h  clw_vector.h  clw_vector.hpp
opencl_wrapper/src/: clw_context.cpp
subprojects/: .gitignore
subprojects/stb/: meson.build
tests/sdf/: meson.build  sdf_test.cpp  testdata.nrrd  values.x
